# Pi-Mandelbrot-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  PiGPGPU  PiGPGPU.cpp  PiGPGPU.h
